Add modified_by to BulkUpdate API endpoint
Add modified_by to BulkUpdate API endpoint. Only visible to users with
permissions to view the information.
