# openapi.yaml
@@ -918,6 +918,7 @@ components:
         description: Change something
         is_approved: false
         state: draft
+        modified_by: Matti Meikäläinen
       properties:
         id:
           description: Unique identifier
@@ -946,6 +947,10 @@ components:
             - sent_for_review
             - waiting_for_approval
             - approved
+        modified_by:
+          description: First and last name of User who last modified the object
+          type: string
+          nullable: true
     BulkUpdateChanges:
       type: object
       description: |
